test/files/neg/bug1279a.check
bug1279a.scala:34: error: no type parameters for method all4Impl: (M{type T <: U})Stream[M{type T <: U}] exist so that it can be applied to arguments (first.selfType)
 --- because ---
result type Stream[M{type T <: U}] is incompatible with expected type Stream[M{type T <: U}]
   def all4Impl[U](first: M {type T <: U}): Stream[M {type T <: U}] = Stream.cons(first, all4Impl(first.next))
                                                                                         ^
one error found
